# electronic_bulletin

./: .gitignore  pyproject.toml
src/: bboard.sqlite3
src/bboard/: settings.py
src/main/: admin.py  apps.py  forms.py  models.py  urls.py  utilities.py  views.py
src/static/main/: style.css
src/templates/email/: activation_letter_body.txt
src/templates/layout/: basic.html
src/templates/main/: about.html  activation_done.htm  activation_done_earlier.html  activation_failed.html  index.html  login.html  password_edit.html  profile.html  profile_delete.html  profile_edit.html  register.html  register_done.html
