[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Motya <fut4dbd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.1,<5.0"
django-bootstrap5 = ">=22.1,<23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
